# fastapi-boilerplate-v2

./: .env.example  .gitignore  LICENSE  PROJECT_SUMMARY.md  README.md  pyproject.toml  run.sh  test_quick.sh
app/: __init__.py  main.py
app/api/: __init__.py  health.py  users.py
app/core/: __init__.py  config.py
app/schemas/: __init__.py  base.py  user.py
app/services/: __init__.py  user_service.py
app/static/css/: main.css
app/static/js/: main.js
app/templates/: base.html  index.html
tests/: __init__.py  conftest.py  test_health.py  test_main.py  test_users.py
